<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Buy Sell</string>

    <string name="warning">Warning !</string>
    <string name="enter_password">Please enter password.</string>
    <string name="enter_username_password">Please enter userid and password.</string>
    <string name="enter_username">Please enter userId.</string>
    <string name="Cancel">cancel</string>
    <string name="OK">OK</string>

    <!--    homescreenactivity_string-->
    <string name="supp_prod">Supp w/o Prod</string>
    <string name="supp_item">Supp w/o Acc</string>
    <string name="pending_order">Pending Order</string>
    <string name="cart">Cart</string>
    <string name="pending_del">Pending to deliver</string>
    <string name="pending_rec">Pending to receive</string>
    <string name="pending_pay">Pending to pay</string>
    <string name="supp_list">Suppliers \nlist</string>
    <string name="fav_list_item">Fav item \nlist</string>
    <string name="cust_list">Customers \nlist</string>
    <string name="so">SO</string>
    <string name="po">PO</string>

    <string name="title_activity_demoo">demoo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="cr_upd_supp">Create/Update \nSupplies</string>
    <string name="cr_upd_item">Create/Update \nItems</string>
    <string name="cr_upd_promo">Create/Update \nPromo</string>
    <string name="cr_upd_ship">Create/Update \nShip to</string>
    <string name="cr_upd_bill">Create/Update \nBill to</string>

    <string name="do_you_want_to_logout">Are you sure you want to logout?</string>

    <string name="open_pos">Open Pos</string>
    <string name="to_receive">To Receive</string>
    <string name="to_pay">To Pay</string>
    <string name="open_sos">Open So s</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
</resources>
