<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:padding="@dimen/_16sdp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_centerInParent="true"
                    android:src="@color/gray_dark"
                    app:civ_border_color="@color/dark"
                    android:id="@+id/imgUserProfilePic"
                    app:civ_border_width="@dimen/_2sdp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_76sdp">

                    <ImageView
                        android:layout_width="@dimen/_26sdp"
                        android:layout_height="@dimen/_26sdp"
                        android:id="@+id/imgEditUserDetails"
                        android:src="@drawable/edit_icon" />
                </LinearLayout>



            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llsupp_acc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/supp_acc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"/>

                    <TextView
                        android:id="@+id/txtsupp_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llsupp_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/supp_item"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>

                    <TextView
                        android:id="@+id/txtsupp_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="40"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llpending_deliver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/pending_del"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>

                    <TextView
                        android:id="@+id/txtPending_delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="15"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llpending_receiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/pending_rec"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>

                    <TextView
                        android:id="@+id/txtPending_receiver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="40"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llpending_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/pending_order"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>

                    <TextView
                        android:id="@+id/txtPending_oder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="40"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llpending_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/pending_pay"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>

                    <TextView
                        android:id="@+id/txtPending_pay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="30"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llcart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/cart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>

                    <TextView
                        android:id="@+id/txtcart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_weight="0.11"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCust_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:gravity="center"
            android:text="@string/cust_list"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:id="@+id/txtSupp_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:gravity="center"
            android:text="@string/supp_list"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:id="@+id/txtfav_item_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:gravity="center"
            android:text="@string/fav_list_item"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:id="@+id/txt_so"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:gravity="center"
            android:text="@string/so"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:id="@+id/txt_po"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round"
            android:gravity="center"
            android:text="@string/po"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>